--- a/Rnwood.Smtp4dev/ClientApp/components/headers.vue.html
+++ b/Rnwood.Smtp4dev/ClientApp/components/headers.vue.html
@@ -1,12 +1,13 @@
 ﻿<template>
 
     <div v-show="headers" class="headers">
-        <el-table :data="headers" empty-text="No headers" :default-sort="{prop: 'name', order: 'ascending'}" class="table fill">
+        <el-table ref="table" :data="headers" empty-text="No headers" :default-sort="{prop: 'name', order: 'ascending'}" class="table fill">
             <el-table-column property="name" label="Name" width="150" sortable>
             </el-table-column>
             <el-table-column property="value" label="Value" sortable>
             </el-table-column>
         </el-table>
+        <button @click="doLayout">Do layout</button>
     </div>
 </template>
 
