--- a/Rnwood.Smtp4dev/ClientApp/css/site.css
+++ b/Rnwood.Smtp4dev/ClientApp/css/site.css
@@ -3,6 +3,7 @@ html, body {
     padding: 0;
     width: 100%;
     height: 100%;
+    overflow: hidden;
     background: white;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 14px;
@@ -11,6 +12,7 @@ html, body {
 #app-root {
     width: 100%;
     height: 100%;
+    overflow: hidden;
 }
 
 .el-tabs {
@@ -19,15 +21,21 @@ html, body {
     height: 100%;
     width: 100%;
     align-items: stretch;
+    overflow: hidden;
 }
 
 .el-tab-pane {
-    flex: 1 0 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
 }
 
 .el-tabs__content {
-    flex-grow: 1;
+    width: 100%;
+    height: 100%;
     display: flex;
+    overflow: hidden;
+    padding: 6px !important;
 }
 
 .messagelist, .messageview, .sessionlist, .headers {
@@ -39,9 +47,14 @@ html, body {
 }
 
 .messagelist .table, .sessionlist .table, .headers .table {
-    overflow-y: scroll;
     overflow-x: auto;
+    overflow-y: hidden;
     flex: 1;
+}
+
+el-table__body {
+    overflow-y: scroll !important;
+    
 }
 
 .el-icon-caret-right:before {
@@ -52,7 +65,6 @@ html, body {
     display: flex;
     flex-direction: row;
     align-content: stretch;
-    column-gap: 10px
 }
 
 .fillpanel.h {
@@ -67,6 +79,9 @@ html, body {
 .fillhalf {
     flex: none;
     width: 50%;
+    height: 100%;
+    overflow: hidden;
+    padding: 0px 6px;
 }
 
 .centrecontents {
